readability fixes

--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -3,7 +3,7 @@
 body {
     width: 100%;
     height: 100%;
-    background-image: url('../img/brick_and_ivy_op.png');
+    background-image: url('../img/brick_and_ivy.png');
     background-repeat: no-repeat;
     background-position: 50% 0;
     -ms-background-size: cover;
@@ -92,6 +92,9 @@ div.header {
 }
 
 .trans-box {
+    margin-top:30px;
+    padding-left:10px;
+    padding-right:10px;
     background-color: #ffffff;
     border: 1px solid black;
     opacity: 0.8;
